[package]
name = "token-vesting"
version = "0.1.0"
authors = ["Elliott Benisty <elliott@bonfida.com>", "Lucas Chaumeny <lucas@bonfida.com>", "Oguntunde Caleb Fiyinfoluw <oasis.mystre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "fuzz"
]

[features]
no-entrypoint = []
test-bpf = []
fuzz = ["arbitrary", "honggfuzz"]

[dependencies]
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.7"
solana-program = "1.16.0"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.6", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
arbitrary = { version = "1.0", features = ["derive"], optional = true }
honggfuzz = { version = "0.5", optional = true }
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[dev-dependencies]
solana-sdk = "1.16.0"
solana-program-test = "1.16.0"
tokio = { version = "1.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
